# MediaPlayer

./: .gitignore  CMakeLists.txt
srcs/: mainwindow.cpp  mainwindow.hpp
srcs/controllers/: MediaPlayerC.cpp  MediaPlayerC.hpp
srcs/models/: AudioFileM.cpp  AudioFileM.hpp  MediaPlayerM.cpp  MediaPlayerM.hpp  TracksTableM.cpp  TracksTableM.hpp
srcs/views/: MediaPlayerV.cpp  MediaPlayerV.hpp  PlayListButtonsV.cpp  PlayListButtonsV.hpp  PlayListV.cpp  PlayListV.hpp  PlayScreenV.cpp  PlayScreenV.hpp  PlayerButtonsV.cpp  PlayerButtonsV.hpp  PlayerV.cpp  PlayerV.hpp  ScreenV.cpp  ScreenV.hpp
